# lio

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  default.nix  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yaml  release.yaml
examples/: ffi_read_write.c
iouring-sys/: Cargo.toml
lio/: Cargo.toml  build.rs  cbindgen.toml  liburing_wrapper.h
lio-net/: Cargo.toml
lio-net/src/: lib.rs  socket.rs
lio-uring/: Cargo.toml  README.md  build.rs
lio-uring/examples/: basic_io.rs  linked_ops.rs  registered_buffers.rs  sqpoll_optimized.rs  tcp_echo.rs
lio-uring/src/: bindings.rs  completion.rs  lib.rs  operation.rs  submission.rs
lio-uring/tests/: file_ops.rs  network.rs  ring.rs
lio/examples/: testing.rs
lio/include/: lio.h
lio/proptest-regressions/: store.txt
lio/src/: backends.rs  blocking_queue.rs  buf.rs  driver.rs  ffi.rs  lib.rs  liburing.rs  lio.rs  macros.rs  net_utils.rs  op.rs  op_progress.rs  op_registration.rs  operation.rs  resource.rs  store.rs  sync.rs  test_utils.rs  typed_op.rs  worker.rs
lio/src/api/: io.rs  mod.rs  ops.rs  progress.rs  resource.rs
lio/src/api/ops/: accept.rs  accept_unix.rs  bind.rs  close.rs  connect.rs  fsync.rs  linkat.rs  listen.rs  nop.rs  openat.rs  read.rs  read_at.rs  readv.rs  recv.rs  send.rs  shutdown.rs  socket.rs  symlink.rs  tee.rs  timeout.rs  truncate.rs  write.rs  write_at.rs  writev.rs
lio/src/backends/: backends.rs  blocking.rs  dummy.rs  handler.rs  io_uring.rs  iocp.rs  polling.rs  store.rs  submitter.rs  test_macro.rs  threading.rs
lio/src/backends/impls/: dummy.rs  io_uring.rs  iocp.rs
lio/src/backends/impls/pollingv2/: interest.rs  mod.rs  os.rs  tests.rs
lio/src/backends/impls/pollingv2/os/: epoll.rs  kqueue.rs
lio/src/backends/pollingv2/: mod.rs  notifier.rs  os.rs  tests.rs  util.rs
lio/src/backends/pollingv2/os/: epoll.rs  kqueue.rs
lio/src/fs/: mod.rs  open_options.rs  ops.rs
lio/src/net/: mod.rs  ops.rs  socket.rs  tcp.rs
lio/src/op/: accept.rs  bind.rs  close.rs  connect.rs  fsync.rs  linkat.rs  listen.rs  mod.rs  nop.rs  openat.rs  ops.rs  progress.rs  read.rs  recv.rs  send.rs  shutdown.rs  socket.rs  symlink.rs  tee.rs  timeout.rs  truncate.rs  write.rs
lio/src/op/ops/: accept.rs  bind.rs  close.rs  connect.rs  fsync.rs  linkat.rs  listen.rs  nop.rs  openat.rs  read.rs  read_at.rs  recv.rs  send.rs  shutdown.rs  socket.rs  symlink.rs  tee.rs  timeout.rs  truncate.rs  write.rs  write_at.rs
lio/src/registration/: notifier.rs  registration.rs  stored.rs
lio/tests/: accept.rs  bind.rs  common.rs  connect.rs  ffi.rs  listen.rs  openat.rs  shutdown.rs  socket.rs  stress.rs  test_accept.rs  test_bind.rs  test_callback.rs  test_close.rs  test_close_timing.rs  test_closev2.rs  test_connect.rs  test_detach_safe.rs  test_driver.rs  test_file_ops.rs  test_listen.rs  test_openat.rs  test_read.rs  test_recv.rs  test_scatter_gather.rs  test_send.rs  test_send_recv.rs  test_shutdown.rs  test_socket.rs  test_tee.rs  test_timeout.rs  test_timeout_timerfd.rs  test_truncate.rs  test_unix_socket.rs  test_write.proptest-regressions  test_write.rs
lio/tests/ffi/: c-src.c  cpp-src.cpp  test.sh  test_error_handling.c  test_file_ops.c  test_lifecycle.c  test_send_recv.c  test_socket_ops.c  test_timeout.c  test_utils.h
lio/tests/nix-build/: test.sh  test_pkgconfig.c
scripts/: lint-full.sh  lint.sh  test-ffi.sh  test-lio-uring.sh  test.sh
vm/: README.md  run.sh
vm/freebsd/: run.sh
vm/illumos/: run.sh
vm/linux/: cloud-init.yaml  run.sh
vm/windows/: run.sh
