[package]
name = "lio"
version = "0.3.0"
edition = "2024"
description = "A platform-independent async I/O library with native support for io_uring (Linux), IOCP (Windows), and kqueue (macOS)"
license = "MIT"
repository = "https://github.com/liten-rs/liten"
documentation = "https://docs.rs/lio"
keywords = ["async", "io", "networking", "filesystem"]
categories = ["asynchronous", "network-programming", "filesystem"]
authors = ["Vincent Thomas <vincent@v-thomas.com>"]
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
tracing = ["dep:tracing"]
high = []
unstable_ffi = []
parking_lot = ["dep:parking_lot"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
socket2 = { version = "0.6.0" }
libc = { version = "0.2.174" }

tracing = { version = "0.1.41", optional = true }
thiserror = "2.0.17"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.9"

[target.'cfg(not(target_os = "linux"))'.dependencies]
polling = "3.10.0"

[build-dependencies]
cfg_aliases = "0.2.1"

[dev-dependencies]
liten = { path = "../liten", features = ["runtime"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
proptest = "1.4"
futures-task = "0.3.31"

[target.'cfg(loom)'.dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
