[package]
name = "lio"
version = "0.3.0"
edition = "2024"
description = "A platform-independent async I/O library with native support for io_uring (Linux), IOCP (Windows), and kqueue (macOS)"
license = "MIT"
repository = "https://github.com/vincent-thomas/lio"
documentation = "https://docs.rs/lio"
keywords = ["async", "io", "networking", "filesystem"]
categories = ["asynchronous", "network-programming", "filesystem"]
authors = ["Vincent Thomas <vincent@v-thomas.com>"]
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
unstable_ffi = []
bytes = ["dep:bytes"]
zeroize = ["dep:zeroize"]

[dependencies]

# Required
libc.workspace = true
scc = { version = "3.4.8", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }

# Optional
bytes = { version = "1.11.0", optional = true, default-features = false, features = ["std"] }
zeroize = { version = "1.8.2", optional = true, default-features = false, features = ["alloc"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_IO"] }

[build-dependencies]
cfg_aliases = "0.2.1"

[dev-dependencies]
fastrand = "2.3.0"
proptest = "1.4"
